--- a/NTComponents/Form/TnTInputRadio.razor.scss
+++ b/NTComponents/Form/TnTInputRadio.razor.scss
@@ -1,4 +1,4 @@
-﻿@use '_inputBase.scss' as base;
+@use '_inputBase.scss' as base;
 @use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 .tnt-radio-input {
@@ -219,4 +219,6 @@
             }
         }
     }
+
+
 }
