--- a/NTComponents/Form/_inputBase.scss
+++ b/NTComponents/Form/_inputBase.scss
@@ -1,4 +1,4 @@
-﻿@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_colors.scss' as colors;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 
 $error-color: var(--tnt-input-error-color);
@@ -17,6 +17,8 @@ $background-color: var(--tnt-input-background-color);
         @include typescale.tnt-body-large;
     }
 }
+
+
 
 @mixin disabled-and-readonly {
     &:has(input[readonly]) {
@@ -208,9 +210,22 @@ $background-color: var(--tnt-input-background-color);
                     padding: 0 4px;
                 }
 
+                &.tnt-form-compact {
+                    .tnt-label {
+                        transform: scale(0.75) translateY(-26px);
+                    }
+                }
+
+
                 &:has(.tnt-start-icon) {
                     .tnt-label {
-                        transform: scale(0.75) translate(-50px,-38px)
+                        transform: scale(0.75) translate(-50px,-38px);
+                    }
+
+                    &.tnt-form-compact {
+                        .tnt-label {
+                            transform: scale(0.75) translate(-50px,-26px);
+                        }
                     }
                 }
             }
@@ -260,6 +275,12 @@ $background-color: var(--tnt-input-background-color);
                     transform-origin: left;
                     transform: scale(0.75) translateY(-20px);
                 }
+
+                &.tnt-form-compact {
+                    .tnt-label {
+                        transform: scale(0.75) translateY(-14px);
+                    }
+                }
             }
 
             &:has(#{$element}:focus), &:has(#{$element}:active) {
@@ -283,5 +304,48 @@ $background-color: var(--tnt-input-background-color);
                 }
             }
         }
+    }
+}
+
+@mixin tnt-form-compact($element: input) {
+    margin-bottom: 26px;
+
+    &.tnt-form-outlined {
+        grid-template-rows: 38px;
+
+        &:has(.tnt-label) {
+            &:has(input:not(:placeholder-shown)), &:has(input:focus), &:has(input:active), &.tnt-placeholder {
+                .tnt-label {
+                    transform: scale(0.75) translateY(-26px);
+                }
+
+
+                &:has(.tnt-start-icon) {
+                    .tnt-label {
+                        transform: scale(0.75) translate(-50px,-26px);
+                    }
+                }
+            }
+        }
+    }
+
+    &.tnt-form-filled {
+        grid-template-rows: 39px; // +1 from border-bottom
+
+        &:has(.tnt-label) {
+            &:has(#{$element}:not(:placeholder-shown)), &:has(#{$element}:focus), &:has(#{$element}:active), &.tnt-placeholder {
+                .tnt-label {
+                    transform: scale(0.75) translateY(-14px);
+                }
+            }
+        }
+    }
+
+    .tnt-label {
+        @include typescale.tnt-body-medium;
+    }
+
+    ::deep input {
+        @include typescale.tnt-body-medium;
     }
 }
