--- a/NTComponents/Form/TnTInputBase.razor
+++ b/NTComponents/Form/TnTInputBase.razor
@@ -22,7 +22,7 @@
 		<ValidationMessage TValue="@TInputType" For="@ValueExpression" class="tnt-components tnt-supporting-text tnt-validation-message" />
 	}
 
-	@if (GetMaxLength() > 0 && RendererInfo.IsInteractive) {
+	@if (GetMaxLength() > 0 && RendererInfo.IsInteractive && ShowInputLength) {
 		<span class="tnt-input-length">
 			@(CurrentValueAsString?.Length ?? 0)/@(GetMaxLength())
 		</span>
